--- a/AOS/app/src/main/res/layout/activity_main.xml
+++ b/AOS/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/onlyWhite"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"/>
+    android:layout_height="match_parent">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="168.5dp"
+        android:src="@drawable/login_bg"
+        />
+
+
+    <RelativeLayout
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/logo_login"
+            android:layout_width="300dp"
+            android:layout_height="90dp"
+            android:src="@drawable/login_logo"
+            />
+        <TextView
+            android:id="@+id/title_id"
+            android:layout_marginTop="25dp"
+            android:layout_below="@+id/logo_login"
+            android:textStyle="bold"
+            android:text="아이디"
+            android:textColor="@color/titleblue"
+            android:textSize="16dp"
+            android:fontFamily="@font/notosans_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <EditText
+            android:id="@+id/edit_id_login"
+            android:layout_below="@+id/title_id"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textSize="16dp"
+            android:textColor="@color/gray19"
+            android:fontFamily="@font/notosans_regular"
+            android:hint="아이디를 입력하세요."
+            />
+
+        <TextView
+            android:id="@+id/title_pw"
+            android:layout_marginTop="15dp"
+            android:layout_below="@+id/edit_id_login"
+            android:textStyle="bold"
+            android:text="비밀번호"
+            android:textColor="@color/titleblue"
+            android:textSize="16dp"
+            android:fontFamily="@font/notosans_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <EditText
+            android:layout_below="@+id/title_pw"
+            android:id="@+id/edit_pw_login"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textSize="16dp"
+            android:textColor="@color/gray19"
+            android:fontFamily="@font/notosans_regular"
+            android:hint="비밀번호를 입력하세요."
+            />
+        <LinearLayout
+            android:id="@+id/check_layout"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="14dp"
+            android:orientation="horizontal"
+            android:layout_below="@+id/edit_pw_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_weight="0.5"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView
+                    android:text="아이디저장"
+                    android:textColor="@color/gray19"
+                    android:textSize="16dp"
+                    android:fontFamily="@font/notosans_regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_weight="0.5"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView
+                    android:text="자동로그인"
+                    android:textColor="@color/gray19"
+                    android:textSize="16dp"
+                    android:fontFamily="@font/notosans_regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/button_login"
+            android:background="@drawable/xml_login_btn"
+            android:text="로그인"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/onlyWhite"
+            android:fontFamily="@font/notosans_medium"
+            android:layout_below="@+id/check_layout"
+            android:stateListAnimator="@null"
+            android:layout_width="match_parent"
+            android:layout_height="60dp" />
+        <RelativeLayout
+            android:layout_marginTop="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/button_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:id="@+id/rock_image"
+                android:src="@drawable/login_rock"
+                android:layout_width="30dp"
+                android:layout_height="30dp"/>
+            <TextView
+                android:layout_marginLeft="8dp"
+                android:text="비밀번호 찾기"
+                android:textColor="@color/gray19"
+                android:textSize="17dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/rock_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:layout_marginRight="5dp"
+            android:layout_gravity="center"
+            android:text="(주)세인홈시스"
+            android:textColor="@color/bottomtextblue"
+            android:textSize="17dp"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_marginRight="5dp"
+            android:layout_gravity="center"
+            android:text="@string/phone_number"
+            android:textColor="@color/bottomtextblue"
+            android:textSize="17dp"
+            android:textStyle="bold"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <ImageView
+            android:src="@drawable/call"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
+    </LinearLayout>
+
+</RelativeLayout>
