--- a/AOS/app/src/main/res/values/colors.xml
+++ b/AOS/app/src/main/res/values/colors.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#666666</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#2473FC</color>
+
+
+
+    <color name="titleblue">#4565B8</color>
+
+    <color name="buttonblue">#009DF6</color>
+
+    <color name="bottomtextblue">#083190</color>
+
+
+
+
+    <color name="onlyWhite">#ffffff</color>
+    <color name="gray19">#191919</color>
+    <color name="gray66">#666666</color>
+    <color name="grayE8">#E8E8E8</color>
+    <color name="grayF8">#F8F8F8</color>
 </resources>
