--- a/AOS/app/src/main/res/layout/activity_login.xml
+++ b/AOS/app/src/main/res/layout/activity_login.xml
@@ -83,6 +83,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <CheckBox
+                    android:id="@+id/check_save_login"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
@@ -100,6 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <CheckBox
+                    android:id="@+id/check_auto_login"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
@@ -126,6 +128,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp" />
         <RelativeLayout
+            android:id="@+id/layout_find_login"
             android:layout_marginTop="40dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/button_login"
@@ -167,6 +170,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/txt_phone_login"
             android:layout_marginRight="5dp"
             android:layout_gravity="center"
             android:text="@string/phone_number"
@@ -177,6 +181,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <ImageView
+            android:id="@+id/img_phone_login"
             android:src="@drawable/call"
             android:layout_width="30dp"
             android:layout_height="30dp"/>
