--- a/AOS/app/src/main/res/layout/activity_password.xml
+++ b/AOS/app/src/main/res/layout/activity_password.xml
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"/>
 
         <EditText
-            android:id="@+id/edit_id_login"
+            android:id="@+id/edit_id_findpass"
             android:layout_below="@+id/title_id"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -77,7 +77,7 @@
         <TextView
             android:id="@+id/title_phone"
             android:layout_marginTop="15dp"
-            android:layout_below="@+id/edit_id_login"
+            android:layout_below="@+id/edit_id_findpass"
             android:textStyle="bold"
             android:text="휴대폰 번호"
             android:textColor="@color/titleblue"
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"/>
         <TextView
             android:layout_toEndOf="@+id/title_phone"
-            android:layout_below="@+id/edit_id_login"
+            android:layout_below="@+id/edit_id_findpass"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="5dp"
             android:text="*"
@@ -124,6 +124,7 @@
             />
 
         <RelativeLayout
+            android:id="@+id/oauthmain_password"
             android:layout_below="@+id/edit_phone_password"
             android:layout_width="match_parent"
             android:layout_height="45dp">
@@ -138,6 +139,7 @@
                 android:hint="인증 번호 입력" />
 
             <TextView
+                android:id="@+id/txt_limit_password"
                 android:layout_marginTop="8dp"
                 android:layout_toStartOf="@+id/btn_oauth_password"
                 android:layout_marginRight="10dp"
