--- a/AOS/app/src/main/res/layout/dialog_confirm_two.xml
+++ b/AOS/app/src/main/res/layout/dialog_confirm_two.xml
@@ -56,12 +56,13 @@
                 android:layout_marginBottom="18dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_margin="1dp"
                     android:id="@+id/tv_confirm1"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.5"
                     android:layout_height="50dp"
                     android:gravity="center"
                     android:background="@drawable/xml_login_btn"
@@ -72,9 +73,10 @@
                     android:text="확인" />
 
                 <TextView
-                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="8dp"
                     android:id="@+id/tv_confirm2"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.5"
                     android:layout_height="50dp"
                     android:gravity="center"
                     android:background="@drawable/xml_login_btn_w"
