--- a/AOS/app/src/main/res/values/colors.xml
+++ b/AOS/app/src/main/res/values/colors.xml
@@ -12,11 +12,11 @@
 
     <color name="bottomtextblue">#083190</color>
 
-
-
+    <color name="graybtn" >#A0ADBA</color>
 
     <color name="onlyWhite">#ffffff</color>
     <color name="gray19">#191919</color>
+    <color name="gray33">#333333</color>
     <color name="gray66">#666666</color>
     <color name="grayE8">#E8E8E8</color>
     <color name="grayF8">#F8F8F8</color>
