--- a/AOS/app/src/main/res/layout/activity_password.xml
+++ b/AOS/app/src/main/res/layout/activity_password.xml
@@ -69,6 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:textSize="16dp"
+            android:singleLine="true"
             android:textColor="@color/gray19"
             android:fontFamily="@font/notosans_regular"
             android:hint="아이디를 입력하세요."
@@ -106,6 +107,7 @@
             android:textColor="@color/gray19"
             android:fontFamily="@font/notosans_regular"
             android:hint="비밀번호를 입력하세요."
+            android:inputType="number"
             />
 
         <Button
@@ -136,6 +138,7 @@
                 android:textSize="16dp"
                 android:textColor="@color/gray19"
                 android:fontFamily="@font/notosans_regular"
+                android:inputType="number"
                 android:hint="인증 번호 입력" />
 
             <TextView
@@ -216,6 +219,7 @@
             android:textColor="@color/gray19"
             android:fontFamily="@font/notosans_regular"
             android:hint="숫자 6자리 이상 입력하세요."
+            android:inputType="number"
             />
 
         <Button
