--- a/AOS/app/src/main/res/layout/activity_web.xml
+++ b/AOS/app/src/main/res/layout/activity_web.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <WebView
+    <com.sinkleader.install.ui.view.WebViewCustom
         android:id="@+id/webview_web"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
