--- a/AOS/app/src/main/res/layout/dialog_confirm.xml
+++ b/AOS/app/src/main/res/layout/dialog_confirm.xml
@@ -11,12 +11,11 @@
 
 
         <LinearLayout
-            android:padding="20dp"
             android:id="@+id/lly_bg"
-            android:background="@drawable/xml_dialog"
+            android:background="@color/onlyWhite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="180dp"
             android:layout_marginLeft="36dp"
             android:layout_marginRight="36dp"
             android:clickable="true"
@@ -24,45 +23,32 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/title_content"
+                android:id="@+id/tv_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:fontFamily="@font/notosans_bold"
                 android:gravity="center"
-                android:padding="5dp"
+                android:paddingTop="30dp"
+                android:paddingBottom="30dp"
                 android:textStyle="bold"
                 android:textColor="@color/gray33"
                 android:text="비밀번호 찾기"
-                android:textSize="17dp" />
-
-            <TextView
-                android:id="@+id/tv_content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:gravity="center"
-                android:paddingBottom="28dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:paddingTop="22dp"
-                android:fontFamily="@font/notosans_regular"
-                android:text="선택된 클로버는 내정보 > 설정에서\n확인 가능합니다."
-                android:textColor="@color/gray66"
-                android:textSize="15dp" />
+                android:textSize="23dp" />
 
             <RelativeLayout
-                android:background="@drawable/xml_login_btn"
+                android:background="@color/buttonblue"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
                     android:id="@+id/tv_confirm1"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="55dp"
                     android:gravity="center"
                     android:textColor="@android:color/white"
-                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    android:textSize="22dp"
                     android:fontFamily="@font/notosans_regular"
                     android:text="확인" />
             </RelativeLayout>
