--- a/AOS/app/src/main/res/layout/dialog_confirm_two.xml
+++ b/AOS/app/src/main/res/layout/dialog_confirm_two.xml
@@ -13,27 +13,24 @@
             android:id="@+id/lly_bg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="180dp"
             android:layout_marginLeft="36dp"
             android:layout_marginRight="36dp"
-            android:background="@drawable/xml_dialog"
+            android:background="@color/onlyWhite"
             android:clickable="true"
             android:focusableInTouchMode="true"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:gravity="center"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
+            <ImageView
+                android:id="@+id/img_close"
+                android:layout_gravity="right"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
                 android:paddingTop="22dp"
-                android:text="알림"
-                android:textStyle="bold"
-                android:fontFamily="@font/notosans_regular"
-                android:textColor="@android:color/black"
-                android:textSize="22dp" />
+                android:paddingBottom="12dp"
+                android:src="@drawable/close_img"/>
 
             <TextView
                 android:id="@+id/tv_content"
@@ -45,15 +42,16 @@
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:paddingTop="22dp"
+                android:text="로그아웃 하시겠습니까?"
+                android:textStyle="bold"
                 android:fontFamily="@font/notosans_regular"
-                android:text="선택된 클로버는 내정보 > 설정에서\n확인 가능합니다."
                 android:textColor="@android:color/black"
-                android:textSize="15dp" />
+                android:textSize="22dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="18dp"
+                android:layout_marginBottom="30dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:orientation="horizontal">
@@ -62,34 +60,32 @@
                     android:layout_margin="1dp"
                     android:id="@+id/tv_confirm1"
                     android:layout_width="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.3"
                     android:layout_height="50dp"
                     android:gravity="center"
-                    android:background="@drawable/xml_login_btn"
+                    android:background="@drawable/xml_popup_btn_glay"
                     android:textColor="@android:color/white"
-                    android:textSize="18dp"
+                    android:textSize="20dp"
                     android:fontFamily="@font/notosans_regular"
                     android:textStyle="bold"
                     android:text="확인" />
 
                 <TextView
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="4dp"
                     android:id="@+id/tv_confirm2"
                     android:layout_width="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.7"
                     android:layout_height="50dp"
                     android:gravity="center"
-                    android:background="@drawable/xml_login_btn_w"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="18dp"
+                    android:background="@drawable/xml_popup_btn"
+                    android:textColor="@color/onlyWhite"
+                    android:textSize="20dp"
                     android:fontFamily="@font/notosans_regular"
                     android:textStyle="bold"
                     android:text="확인" />
 
             </LinearLayout>
-
         </LinearLayout>
-
     </RelativeLayout>
 
 </RelativeLayout>
