--- a/AOS/app/src/main/res/xml/network_security_config.xml
+++ b/AOS/app/src/main/res/xml/network_security_config.xml
@@ -2,8 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
 
-
-
+        <domain includeSubdomains="true">192.168.29.248</domain>
         <domain includeSubdomains="true">office.aend.co.kr</domain>
 
         <domain includeSubdomains="true">dapi.kakao.com</domain>
