[AOS 개발] Fire base이전 및 카메라 사진 적용 싸인,QR 작동확인, 앱아이콘 수정

--- a/AOS/app/src/main/res/xml/network_security_config.xml
+++ b/AOS/app/src/main/res/xml/network_security_config.xml
@@ -3,7 +3,10 @@
     <domain-config cleartextTrafficPermitted="true">
 
         <domain includeSubdomains="true">192.168.29.248</domain>
+        <domain includeSubdomains="true">192.168.29.194</domain>
         <domain includeSubdomains="true">office.aend.co.kr</domain>
+
+        <domain includeSubdomains="true">kkksssyyy.iptime.org</domain>
 
         <domain includeSubdomains="true">dapi.kakao.com</domain>
         <domain includeSubdomains="true">t1.daumcdn.net</domain>
