--- a/AOS/app/src/main/res/layout/activity_qrscan.xml
+++ b/AOS/app/src/main/res/layout/activity_qrscan.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp">
         <TextView
+            android:id="@+id/title_scan"
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
