--- a/AOS/app/src/main/res/xml/network_security_config.xml
+++ b/AOS/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,9 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
 
+        <domain includeSubdomains="true">sink-front.dev.aend.co.kr</domain>
+        <domain includeSubdomains="true">sink-api.dev.aend.co.kr</domain>
+
         <domain includeSubdomains="true">192.168.29.248</domain>
         <domain includeSubdomains="true">192.168.29.194</domain>
         <domain includeSubdomains="true">office.aend.co.kr</domain>
@@ -10,7 +13,6 @@
 
         <domain includeSubdomains="true">postcode.map.daum.net</domain>
         <domain includeSubdomains="true">stlog1-local.kakao.com</domain>
-        <domain includeSubdomains="true">sink-api.dev.aend.co.kr</domain>
         <domain includeSubdomains="true">suggest-bar.daum.net</domain>
 
         <domain includeSubdomains="true">dapi.kakao.com</domain>
