--- a/AOS/app/src/main/res/layout/activity_login.xml
+++ b/AOS/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="168.5dp"
         android:src="@drawable/login_bg"
+        android:scaleType="fitStart"
         />
 
 
