[AOS 개발] 당김 리프레시 기능 추가

--- a/AOS/app/src/main/res/layout/activity_web.xml
+++ b/AOS/app/src/main/res/layout/activity_web.xml
@@ -6,8 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.sinkleader.install.ui.view.WebViewCustom
-        android:id="@+id/webview_web"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_web"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <com.sinkleader.install.ui.view.WebViewCustom
+            android:id="@+id/webview_web"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </RelativeLayout>
