[AOS 개발] xml 문구 오류 및 색상 수정, 업로드 못한 자잘한 수정내역 포함.

--- a/AOS/app/src/main/res/layout/activity_password.xml
+++ b/AOS/app/src/main/res/layout/activity_password.xml
@@ -106,7 +106,7 @@
             android:textSize="16dp"
             android:textColor="@color/gray19"
             android:fontFamily="@font/notosans_regular"
-            android:hint="비밀번호를 입력하세요."
+            android:hint="휴대폰번호를 입력하세요."
             android:inputType="number"
             />
 
