--- a/AOS/app/src/main/res/layout/dialog_photo.xml
+++ b/AOS/app/src/main/res/layout/dialog_photo.xml
@@ -33,7 +33,7 @@
                     android:layout_weight="0.6"
                     android:orientation="horizontal"
                     android:layout_width="wrap_content"
-                    android:background="@color/buttonblue"
+                    android:background="#083190"
                     android:gravity="center"
                     android:layout_height="70dp">
 
