--- a/AOS/app/src/main/res/xml/network_security_config.xml
+++ b/AOS/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">front.sinkleader.com</domain>
+        <domain includeSubdomains="true">api.sinkleader.com</domain>
 
         <domain includeSubdomains="true">sink-front.dev.aend.co.kr</domain>
         <domain includeSubdomains="true">sink-api.dev.aend.co.kr</domain>
